get_property(MLIR_TENSORRT_TEST_LIBS GLOBAL PROPERTY MLIR_TENSORRT_TEST_LIBS)
get_property(MLIR_TENSORRT_LIBS GLOBAL PROPERTY MLIR_TENSORRT_LIBS)
get_property(MLIR_TENSORRT_DIALECT_LIBS GLOBAL PROPERTY MLIR_TENSORRT_DIALECT_LIBS)
get_property(MLIR_TENSORRT_DIALECT_TEST_LIBS GLOBAL PROPERTY MLIR_TENSORRT_DIALECT_TEST_LIBS)
set(MLIR_TENSORRT_LIBS
  ${MLIR_TENSORRT_LIBS} ${MLIR_TENSORRT_DIALECT_LIBS} ${MLIR_TENSORRT_TEST_LIBS}
  ${MLIR_TENSORRT_DIALECT_TEST_LIBS}
  MLIRTensorRTTensorRTEncodingImpl
  )
list(REMOVE_DUPLICATES MLIR_TENSORRT_LIBS)

set(LLVM_LINK_COMPONENTS
  Support
  )

add_subdirectory(mlir-tensorrt-opt)
add_subdirectory(mlir-tensorrt-translate)
add_subdirectory(mlir-tensorrt-lsp-server)
add_subdirectory(mlir-tensorrt-runner)
